tests/snapshots/integration__integration_tests__approval_ui__permission_error_user_output.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 0
----- stdout -----
🟡 [33mFailed to save command approval: Failed to write config file: Permission denied (os error 13)[0m
💡 [2mYou will be prompted again next time.[0m
🔄 [36mRunning post-create:[0m
[40m [0m  [1m[34mecho[0m [32m'test command'[0m[0m
✅ [32mCreated new worktree for [1m[32mtest-permission[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO].test-permission[0m[0m
💡 [2mTo enable automatic cd, run: wt config shell[0m

----- stderr -----
🟡 [33m[1m[33mtest-repo[0m[33m wants to execute [1m[33m1[0m[33m command:[0m

🔄 post-create:
[40m [0m  [1m[34mecho[0m [32m'test command'[0m[0m

💡 Allow and remember? [1m[y/N][0m 
[0mtest command
