tests/snapshots/integration__integration_tests__approval_ui__project_prefix_all_requires_approval.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 1
----- stdout -----

----- stderr -----
[33m▲[39m [33m[1morigin[22m needs approval to execute [1m2[22m commands:[39m
[2m○[22m pre-merge [1mtest[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Running project test'[0m
[2m○[22m pre-merge [1mlint[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Running project lint'[0m
[31m✗[39m [31mCannot prompt for approval in non-interactive environment[39m
[2m↳[22m [2mTo skip prompts in CI/CD, add [4m--yes[24m; to pre-approve commands, run [4mwt config approvals add --yes[24m[22m
