tests/snapshots/integration__integration_tests__approval_ui__run_hook_post_merge_requires_approval.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 1
----- stdout -----

----- stderr -----
[33m▲[39m [33m[1morigin[22m needs approval to execute [1m1[22m command:[39m
[2m○[22m post-merge:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Post-merge cleanup for {{ branch }}'[0m
[31m✗[39m [31mCannot prompt for approval in non-interactive environment[39m
[2m↳[22m [2mTo skip prompts in CI/CD, add [4m--yes[24m; to pre-approve commands, run [4mwt config approvals add --yes[24m[22m
